# pii-airlock

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  config.default.yaml  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
hooks/: __init__.py  _common.py  pre_tool_use.py  user_prompt_submit.py
pii_scrub/: __init__.py  cli.py  config.default.yaml  config.py  engine.py  hookinstall.py  mapping.py  mapping_store.py  payload.py  proxy.py
pii_scrub/formats/: __init__.py  base.py  csv_json.py  docx.py  pdf.py  text.py
tests/: test_cli.py  test_engine.py  test_formats.py  test_hook.py  test_hookinstall.py  test_mapping.py  test_mapping_store.py  test_payload.py  test_proxy.py
