[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pii-airlock"
version = "0.2.3"
description = "Local, reversible PII anonymizer (Microsoft Presidio) for LLM workflows and Claude Code"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "pii-airlock contributors" }]
keywords = ["pii", "anonymization", "presidio", "privacy", "llm", "claude-code"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security",
    "Topic :: Text Processing",
]
dependencies = [
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
    "spacy>=3.4",
    "typer>=0.12",
    "click>=8.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
docx = ["python-docx>=1.0"]
pdf = ["pdfminer.six>=20221105"]
proxy = ["httpx>=0.27", "starlette>=0.37", "uvicorn>=0.30"]
all = [
    "python-docx>=1.0",
    "pdfminer.six>=20221105",
    "httpx>=0.27",
    "starlette>=0.37",
    "uvicorn>=0.30",
]
dev = ["pytest>=8.0", "ruff>=0.5", "httpx>=0.27", "starlette>=0.37", "uvicorn>=0.30"]

[project.scripts]
pii-airlock = "pii_scrub.cli:app"

[project.urls]
Homepage = "https://github.com/matinfo/pii-airlock"
Documentation = "https://github.com/matinfo/pii-airlock#readme"
Issues = "https://github.com/matinfo/pii-airlock/issues"
Changelog = "https://github.com/matinfo/pii-airlock/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["pii_scrub", "hooks"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B008: Typer relies on function calls (typer.Option/Argument) in defaults.
ignore = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
